crates/core/src/commands/upload/tests/snapshots/caesura__commands__upload__tests__get_details_tests__get_details_320.snap
---
source: crates/core/src/commands/upload/tests/get_details_tests.rs
expression: output
---
...bum [2020] [WEB 320]/Test Artist - Test Album - 01 Track One.mp3 [ 2.48 MB ]
------------------------
Time: 01:05	MPEG1, Layer III	[ 320 kb/s @ 44100 Hz - Joint stereo ]
------------------------
ID3 v2.4:
title: Track One
artist: Test Artist
album: Test Album
recording date: 2020
track: 1		
Comment: [Description: ] [Lang: XXX]
Processed by SoX
FRONT_COVER Image: [Size: 849 bytes] [Type: image/png]
Description: 

------------------------
...bum [2020] [WEB 320]/Test Artist - Test Album - 02 Track Two.mp3 [ 2.48 MB ]
------------------------
Time: 01:05	MPEG1, Layer III	[ 320 kb/s @ 44100 Hz - Joint stereo ]
------------------------
ID3 v2.4:
title: Track Two
artist: Test Artist
album: Test Album
recording date: 2020
track: 2		
Comment: [Description: ] [Lang: XXX]
Processed by SoX
FRONT_COVER Image: [Size: 849 bytes] [Type: image/png]
Description: 

------------------------
