crates/core/src/commands/upload/tests/snapshots/caesura__commands__upload__tests__get_details_tests__get_details_flac.snap
---
source: crates/core/src/commands/upload/tests/get_details_tests.rs
expression: output
---
------------------------------
Test Artist - Test Album - 01 Track One.flac
------------------------------
METADATA block #0
  type: 0 (STREAMINFO)
  is last: false
  length: 34
  minimum blocksize: 4096 samples
  maximum blocksize: 4096 samples
  minimum framesize: 1127 bytes
  maximum framesize: 1275 bytes
  sample_rate: 44100 Hz
  channels: 2
  bits-per-sample: 16
  total samples: 2866500
  MD5 signature: 026705f44d70e004e1ae7675bda3f65f
METADATA block #1
  type: 4 (VORBIS_COMMENT)
  is last: false
  length: 159
  vendor string: reference libFLAC 1.5.0 20250211
  comments: 6
    comment[0]: Comment=Processed by SoX
    comment[1]: ARTIST=Test Artist
    comment[2]: ALBUM=Test Album
    comment[3]: TITLE=Track One
    comment[4]: TRACKNUMBER=1
    comment[5]: DATE=2020
------------------------------
Test Artist - Test Album - 02 Track Two.flac
------------------------------
METADATA block #0
  type: 0 (STREAMINFO)
  is last: false
  length: 34
  minimum blocksize: 4096 samples
  maximum blocksize: 4096 samples
  minimum framesize: 1398 bytes
  maximum framesize: 1589 bytes
  sample_rate: 44100 Hz
  channels: 2
  bits-per-sample: 16
  total samples: 2866500
  MD5 signature: 4d91ed13e29e2632809cebd3333adb3e
METADATA block #1
  type: 4 (VORBIS_COMMENT)
  is last: false
  length: 159
  vendor string: reference libFLAC 1.5.0 20250211
  comments: 6
    comment[0]: Comment=Processed by SoX
    comment[1]: ARTIST=Test Artist
    comment[2]: ALBUM=Test Album
    comment[3]: TITLE=Track Two
    comment[4]: TRACKNUMBER=2
    comment[5]: DATE=2020
