crates/core/src/commands/upload/tests/snapshots/caesura__commands__upload__tests__get_details_tests__get_details_v0.snap
---
source: crates/core/src/commands/upload/tests/get_details_tests.rs
expression: output
---
...um [2020] [WEB V0]/Test Artist - Test Album - 01 Track One.mp3 [ 767.83 KB ]
------------------------
Time: 01:05	MPEG1, Layer III	[ ~96 kb/s @ 44100 Hz - Joint stereo ]
------------------------
ID3 v2.4:
title: Track One
artist: Test Artist
album: Test Album
recording date: 2020
track: 1		
Comment: [Description: ] [Lang: XXX]
Processed by SoX
FRONT_COVER Image: [Size: 849 bytes] [Type: image/png]
Description: 

------------------------
...um [2020] [WEB V0]/Test Artist - Test Album - 02 Track Two.mp3 [ 720.09 KB ]
------------------------
Time: 01:05	MPEG1, Layer III	[ ~90 kb/s @ 44100 Hz - Joint stereo ]
------------------------
ID3 v2.4:
title: Track Two
artist: Test Artist
album: Test Album
recording date: 2020
track: 2		
Comment: [Description: ] [Lang: XXX]
Processed by SoX
FRONT_COVER Image: [Size: 849 bytes] [Type: image/png]
Description: 

------------------------
